kubernetes-networks/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-svc
  namespace: homework
spec:
  selector:
    app: homework-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
