kubernetes-networks/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homework
  name: nginx-deployment-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "homework.otus"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-deployment-svc
                port:
                  name: web
          - path: /homepage(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-deployment-svc
                port:
                  name: web
